--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@prismicio/client": "^7.17.2",
     "@prismicio/next": "^2.0.1",
     "@prismicio/react": "^3.2.1",
+    "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "next": "15.3.2",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -26,8 +29,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "fluid-tailwind": "^1.0.4",
     "slice-machine-ui": "^2.15.3",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.6",
     "typescript": "^5"
   }
 }
